--- a/_laragigs_theme/edit.html
+++ b/_laragigs_theme/edit.html
@@ -166,9 +166,8 @@
                                 rows="10"
                                 placeholder="Include tasks, requirements, salary, etc"
                             >
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi ipsam quae repellat adipisci quas id? Optio saepe, maxime tempora tenetur iste ratione necessitatibus. Corrupti eveniet distinctio quaerat voluptas itaque sequi molestias assumenda fugiat minus in dicta perferendis, autem velit nihil, at, atque a placeat voluptates? Culpa quia vel laborum nemo.
-            </textarea
-                            >
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi ipsam quae repellat adipisci quas id? Optio saepe, maxime tempora tenetur iste ratione necessitatibus. Corrupti eveniet distinctio quaerat voluptas itaque sequi molestias assumenda fugiat minus in dicta perferendis, autem velit nihil, at, atque a placeat voluptates? Culpa quia vel laborum nemo.
+                            </textarea>
                         </div>
 
                         <div class="mb-6">
